# Distributed_Lasso_via_Multi-Key_Homomorphic_Encryption

./: .gitignore  0.txt  1.txt  2.txt  CMakeLists_pi.txt  README.md  cMakelists.txt  client.cpp  client_sim.py  client_sparsity.cpp  keygen.cpp  plot_convergence.py  plot_sparsity.py  plot_sparsity_mse.py  plot_time.py  server.cpp  server_sim.py  server_sparsity.cpp  sparsity_analysis.py
solve_real/: CMakeLists.txt  client_real.cpp  keygen_real.cpp  plot_convergence_real.py  server_real.cpp
